# SpectraQuant-AI

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPENDENCIES.md  DOCS_INDEX.md  README.md  alembic.ini  config.yaml  install.bat  install.sh  perplexity_research_agent.py  pyproject.toml  requirements-v3.txt  requirements.lock.txt  requirements.txt  trading_assistant_runner.py
alembic/: env.py
archive/: ARCHIVE_INDEX.md
config/: base.yaml  crypto.yaml  equities.yaml  intelligence.example.yaml  logging.yaml  nlp_training.yaml
dashboard/: README.md  __init__.py  app.py
docs/: n8n_integration.md
research_runs/: 20260310_133152_analyze-infy-nifty-futures-and-btc-over-the-last-30-days-key-catalysts-macro-dri.json  20260310_133152_analyze-infy-nifty-futures-and-btc-over-the-last-30-days-key-catalysts-macro-dri.md
scripts/: bootstrap_intelligence.py  compile_check.py  diagnose_repo_state.sh  download_universe.py  fetch_fundamentals.py  fetch_intraday_1m.py  release.sh  release_validate.py  replay_run.py  run_health_check.sh  run_intraday_loop.py  run_pipeline.sh  smoke_dashboard.sh  smoke_simulator.py  universe_debug.py  update_universe_nse.py
tests/: test_allocator.py  test_analog_memory.py  test_arbiter.py  test_backtest_with_sentiment.py  test_candle_aggregation.py  test_cli_cache_logging.py  test_cli_config_cache.py  test_cli_no_sentiment_mode.py  test_cli_smoke.py  test_cli_universe_logging.py  test_cli_wiring.py  test_comprehensive_validation.py  test_config_init_logging.py  test_crypto_cli.py  test_crypto_dataset_ingest.py  test_debuggability.py  (+73 more)
(+839 files in other folders)
